# RoboThoughts_backend

./: CMakeLists.txt  README.md  package.xml  publisher.py  setup.py
api/: app.py  bboxes_callback  bboxes_callback.py  data.txt  robot_data.py  test.py
cfg/: infoNode_cfg.yaml
devel/: .catkin  .rosinstall  local_setup.sh
launch/: infoNode.launch
src/: infoNode.py
